--- a/src/containers/Main.css
+++ b/src/containers/Main.css
@@ -1,4 +1,4 @@
-#main {
+.main {
     padding-top: 50px;
     font-size: 1.4em;
 }
@@ -13,4 +13,8 @@
 .hash {
     color: gray;
     font-style: italic;
+}
+
+.title{
+    font-size: 1.8em;
 }
