--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 @import '~antd/dist/antd.css';
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -27,4 +22,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+#components-layout-demo-top {
+  width: 120px;
+  height: 31px;
+  background: rgba(255,255,255,.2);
+  margin: 16px 24px 16px 0;
+  float: left;
+}
+.logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255,255,255,.2);
+  background-image: url("https://image.ibb.co/hPh5LA/Own-Chain-Logo.png");
+  margin: 16px 24px 16px 0;
+  float: left;
 }
